--- a/prj.conf
+++ b/prj.conf
@@ -1,1 +1,31 @@
-# nothing here
+# Enable compiler output color
+CONFIG_COMPILER_COLOR_DIAGNOSTICS=y
+
+# Debug configs
+CONFIG_ASSERT=y
+CONFIG_RESET_ON_FATAL_ERROR=n
+
+CONFIG_DEBUG=y
+CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_DEBUG_THREAD_INFO=y
+
+CONFIG_THREAD_NAME=y
+CONFIG_THREAD_ANALYZER=y
+
+CONFIG_TRACING=y
+CONFIG_TRACING_BACKEND_RAM=y
+
+CONFIG_SEGGER_SYSTEMVIEW=y
+CONFIG_USE_SEGGER_RTT=y
+
+# Logger configs
+CONFIG_LOG=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_LOG_BACKEND_SHOW_COLOR=y
+CONFIG_LOG_BACKEND_FORMAT_TIMESTAMP=y
+
+# Bluetooth configs 
+CONFIG_BT=y
+CONFIG_BT_MAX_CONN=1
+CONFIG_BT_PERIPHERAL=y
