--- a/prj.conf
+++ b/prj.conf
@@ -8,6 +8,8 @@ CONFIG_RESET_ON_FATAL_ERROR=n
 CONFIG_DEBUG=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_DEBUG_THREAD_INFO=y
+CONFIG_DEBUG_COREDUMP=y
+CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
 
 CONFIG_THREAD_NAME=y
 CONFIG_THREAD_ANALYZER=y
