--- a/prj.conf
+++ b/prj.conf
@@ -31,3 +31,4 @@ CONFIG_LOG_BACKEND_FORMAT_TIMESTAMP=y
 CONFIG_BT=y
 CONFIG_BT_MAX_CONN=1
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_NAME="BLE_SENSE"
