--- a/prj.conf
+++ b/prj.conf
@@ -32,3 +32,6 @@ CONFIG_BT=y
 CONFIG_BT_MAX_CONN=1
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="BLE_SENSE"
+
+# Counter configs
+CONFIG_COUNTER=y
