--- a/prj.conf
+++ b/prj.conf
@@ -35,3 +35,12 @@ CONFIG_BT_DEVICE_NAME="XIAO"
 
 # Counter configs
 CONFIG_COUNTER=y
+
+# IMU settings
+CONFIG_SENSOR=y
+CONFIG_LSM6DSL_TRIGGER_NONE=y
+CONFIG_LSM6DSL_ACCEL_ODR=50
+CONFIG_LSM6DSL_ACCEL_FS=16
+CONFIG_LSM6DSL_GYRO_FS=1000
+CONFIG_LSM6DSL_GYRO_ODR=50
+CONFIG_LSM6DSL_ENABLE_TEMP=y
