test: add sensor log msg

--- a/prj.conf
+++ b/prj.conf
@@ -10,7 +10,7 @@ CONFIG_DEBUG_OPTIMIZATIONS=y
 CONFIG_DEBUG_THREAD_INFO=y
 CONFIG_DEBUG_COREDUMP=y
 CONFIG_DEBUG_COREDUMP_BACKEND_LOGGING=y
-
+CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_THREAD_NAME=y
 CONFIG_THREAD_ANALYZER=y
 
