--- a/prj.conf
+++ b/prj.conf
@@ -39,8 +39,8 @@ CONFIG_COUNTER=y
 # IMU settings
 CONFIG_SENSOR=y
 CONFIG_LSM6DSL_TRIGGER_NONE=y
-# CONFIG_LSM6DSL_ACCEL_ODR=50
-# CONFIG_LSM6DSL_ACCEL_FS=16
-# CONFIG_LSM6DSL_GYRO_FS=1000
-# CONFIG_LSM6DSL_GYRO_ODR=50
-# CONFIG_LSM6DSL_ENABLE_TEMP=y
+CONFIG_LSM6DSL_GYRO_FS=500
+CONFIG_LSM6DSL_GYRO_ODR=3
+CONFIG_LSM6DSL_ACCEL_ODR=3
+CONFIG_LSM6DSL_ACCEL_FS=4
+CONFIG_LSM6DSL_ENABLE_TEMP=y
