--- a/prj.conf
+++ b/prj.conf
@@ -30,6 +30,7 @@ CONFIG_LOG_BACKEND_FORMAT_TIMESTAMP=y
 # Bluetooth configs 
 CONFIG_BT=y
 CONFIG_BT_MAX_CONN=1
+CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="XIAO"
 
