--- a/prj.conf
+++ b/prj.conf
@@ -34,8 +34,16 @@ CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="XIAO"
 
-# Counter configs
-CONFIG_COUNTER=y
+CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT_USER_PHY_UPDATE=y
+CONFIG_BT_USER_DATA_LEN_UPDATE=y
+#This is the maximum data length with Nordic Softdevice controller
+CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
+#These buffers are needed for the data length max. 
+CONFIG_BT_BUF_ACL_TX_SIZE=251
+CONFIG_BT_BUF_ACL_RX_SIZE=251
+#This is the maximum MTU size with Nordic Softdevice controller
+CONFIG_BT_L2CAP_TX_MTU=247
 
 # IMU settings
 CONFIG_SENSOR=y
