--- a/prj.conf
+++ b/prj.conf
@@ -33,8 +33,7 @@ CONFIG_BT=y
 CONFIG_BT_MAX_CONN=7
 CONFIG_BT_LL_SW_SPLIT=y
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DEVICE_NAME="XIAO"
-
+CONFIG_BT_DEVICE_NAME="IMU"
 CONFIG_BT_GATT_CLIENT=y
 CONFIG_BT_USER_PHY_UPDATE=y
 CONFIG_BT_USER_DATA_LEN_UPDATE=y
