--- a/prj.conf
+++ b/prj.conf
@@ -39,6 +39,11 @@ CONFIG_BT_USER_PHY_UPDATE=y
 CONFIG_BT_USER_DATA_LEN_UPDATE=y
 #This is the maximum data length with Nordic Softdevice controller
 CONFIG_BT_CTLR_DATA_LENGTH_MAX=251
+CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=10
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=10
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=5
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=100
 #These buffers are needed for the data length max. 
 CONFIG_BT_BUF_ACL_TX_SIZE=251
 CONFIG_BT_BUF_ACL_RX_SIZE=251
