--- a/prj_release.conf
+++ b/prj_release.conf
@@ -37,3 +37,6 @@ CONFIG_LSM6DSL_ACCEL_ODR=3
 CONFIG_LSM6DSL_ACCEL_FS=4
 CONFIG_LSM6DSL_ENABLE_TEMP=y
 
+# PM settings
+CONFIG_PM_DEVICE=y
+CONFIG_PM_DEVICE_RUNTIME=y
